Adjusted image sizes on product catalogue to avoid overlap

--- a/BlueGardensEESystem/src/main/webapp/resources/css/style.css
+++ b/BlueGardensEESystem/src/main/webapp/resources/css/style.css
@@ -236,6 +236,11 @@ p.questionAnswer{
 	filter: alpha(opacity = 40);
 }
 
+.productCatalogueImage{
+	width: 200%;
+	padding: 10%;
+}
+
 .question {
 	padding-left: 5%;
 	padding-right: 5%;
@@ -320,7 +325,7 @@ p.questionAnswer{
 }
 
 .wishlistImage{
-	width: 200%;
+	width: 100%;
 	padding: 10%;
 }
 
